# libModbusSystematomSPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  libModbusSystematomSPU.cpp  libModbusSystematomSPU.h  libModbusSystematomSPU.hpp  test.cpp
include/: libModbusSystematomSPU.h
resources/: LibModbusSystematomSPUConfig.cmake.in
src/: libModbusSystematomSPU.cpp  test.cpp
